--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en" ng-app="calendarApp" id="top">
   <head>
     <title ng-bind="'Hackathon Event Info - ' + title">Hackathon Event Info</title>
-    <meta property="og:title" content="Hackathon Event Info - {{title}}" /> 
+    <meta http-equiv="Content-Style-Type" content="text/css; charset=UTF-8">
+    <meta http-equiv="Content-Script-Type" content="text/javascript; charset=UTF-8">
+    <meta http-equiv="description" content="hackathonイベント情報一覧。ハッカソンイベントをカレンダーで見れる。過去のハッカソンのプロダクトをまとめる">
+    <meta http-equiv="keywords" content="hackathon,イベント情報,ハッカソマトメ,ハッカソン一覧,プロダクト,ハッカソングループ">
 
+    <meta property="og:title" content="Hackathon Event Info" /> 
     <meta property="og:url" content="http://hackathon.style-info.org/" /> 
     
     <meta property="og:description" content="Hackathonの情報を配信" />
