SEO og:title change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="calendarApp" id="top">
   <head>
     <meta content="!" name="fragment">
-    <title>Hackathon Event Info</title>
+    <title>Hackathon Event Info - {{title}}</title>
     <meta http-equiv="Content-Style-Type" content="text/css; charset=UTF-8">
     
     <meta http-equiv="Content-Script-Type" content="text/javascript; charset=UTF-8">
@@ -10,7 +10,7 @@
     <meta http-equiv="keywords" content="hackathon,イベント情報,ハッカソマトメ,ハッカソン一覧,プロダクト,ハッカソングループ">
     
     <meta content="Hackathon Event Info" property="og:site_name">
-    <meta content="{{ title }}" property="og:title">
+    <meta content="Hackathon Event Info - {{ title }}" property="og:title">
     <meta content="http://hackathon.style-info.org/" property="og:url"> 
     <meta property="og:description" content="Hackathonの情報を配信" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
