--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" ng-app="calendarApp" id="top">
   <head>
     <meta content="!" name="fragment">
-    <title>Hackathon Event Info - {{title}}</title>
+    <title>Hackathon Style Info - {{title}}</title>
     <meta http-equiv="Content-Style-Type" content="text/css; charset=UTF-8">
     
     <meta http-equiv="Content-Script-Type" content="text/javascript; charset=UTF-8">
     <meta http-equiv="description" content="hackathonイベント情報一覧。ハッカソンイベントをカレンダーで見れる。過去のハッカソンのプロダクトをまとめる">
     <meta http-equiv="keywords" content="hackathon,イベント情報,ハッカソマトメ,ハッカソン一覧,プロダクト,ハッカソングループ">
     
-    <meta content="Hackathon Event Info" property="og:site_name">
-    <meta content="Hackathon Event Info - {{ title }}" property="og:title">
+    <meta content="Hackathon Style Info" property="og:site_name">
+    <meta content="Hackathon Style Info - {{ title }}" property="og:title">
     <meta content="http://hackathon.style-info.org/" property="og:url"> 
     <meta property="og:description" content="Hackathonの情報を配信" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
