--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="keywords" content="hackathon,イベント情報,ハッカソマトメ,ハッカソン一覧,プロダクト,ハッカソングループ">
     
     <meta content="Hackathon Style Info" property="og:site_name">
-    <meta content="Hackathon Style Info - {{ title }}" property="og:title">
+    <meta content="Hackathon Style Info" property="og:title">
     <meta content="http://hackathon.style-info.org/" property="og:url"> 
     <meta property="og:description" content="Hackathonの情報を配信" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
