--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta http-equiv="description" content="ハッカソンのイベントカレンダーサイトです。ハッカソンのイベントを地域ごとにカレンダー形式でまとめています。ご希望のイベントをお探し下さい。">
     <meta http-equiv="keywords" content="ハッカソン,まとめ,日程,就活,開催,一覧,情報">
     
-    <meta content="Hackathon Style Info" property="og:site_name">
-    <meta content="Hackathon Style Info - Let's Hackathon! " property="og:title">
-    <meta content="http://hackathon.style-info.org/" property="og:url"> 
+    <meta property="og:site_name" content="Hackathon Style Info">
+    <meta property="og:title" content="Hackathon Style Info - Let's Hackathon! ">
+    <meta property="og:url" content="http://hackathon.style-info.org/"> 
     <meta property="og:description" content="Hackathonの情報を配信" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
