--- a/index.html
+++ b/index.html
@@ -46,23 +46,27 @@
     </script>
   </head>
   <body>
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1&appId=229267003947517";
-      fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <div class="row">
+    <div id="wrap">
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+	 var js, fjs = d.getElementsByTagName(s)[0];
+	 if (d.getElementById(id)) return;
+	 js = d.createElement(s); js.id = id;
+	 js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1&appId=229267003947517";
+	 fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+      </script>
+      <div id="header">
+	<h1 class="text-center">Hackathon Style Info</h1>
+      </div>
       <ng-include src="'partials/template/navbar.html'"></ng-include>
-      <div class="container" ng-view></div>
-    </div>
-    <div style="background-color: #FAFCEE;">
-      <ng-include src="'partials/template/footer.html'"></ng-include>
+      <div id="main" ng-view></div>
+
+      <div id="footer">
+	<ng-include src="'partials/template/footer.html'"></ng-include>
+      </div>
     </div>
   </body>
-    
+  
 </html>
 
