Fix Header Link URL

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        }(document, 'script', 'facebook-jssdk'));
       </script>
       <div id="header">
-	<h1 class="text-center"><a href="">Hackathon Style Info</a></h1>
+	<h1 class="text-center"><a href="#!/">Hackathon Style Info</a></h1>
       </div>
       <ng-include src="'partials/template/navbar.html'"></ng-include>
       <div id="main" ng-view></div>
