--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <meta http-equiv="keywords" content="ハッカソン,まとめ,日程,就活,開催,一覧,情報,地域別,関西,関東,北海道,中国,九州">
     
     <meta property="og:site_name" content="Hackathon Style Info">
-    <meta property="og:title" content="Hackathon Style Info - Let's Hackathon! ">
+    <meta property="og:title" content="Hackathon Style Info - Let's Hackathon!">
     <meta property="og:url" content="http://hackathon.style-info.org/"> 
+
+    <meta property="og:image" content="http://hackathon.style-info.org//images/HackathonStyleInfo.png">
+    <meta property="og:image" content="http://hackathon.style-info.org//images/s_HackathonStyleInfo.png">
+
     <meta property="og:description" content="Hackathonの情報を配信" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
@@ -56,9 +60,6 @@
 	 fjs.parentNode.insertBefore(js, fjs);
        }(document, 'script', 'facebook-jssdk'));
       </script>
-      <div id="header">
-	<h1 class="text-center"><a href="#!/">Hackathon Style Info</a></h1>
-      </div>
       <ng-include src="'partials/template/navbar.html'"></ng-include>
       <div id="main" ng-view></div>
 
