--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <meta property="og:image" content="http://hackathon.style-info.org//images/HackathonStyleInfo.png">
     <meta property="og:image" content="http://hackathon.style-info.org//images/s_HackathonStyleInfo.png">
+    <meta property="og:image" content="http://hackathon.style-info.org//images/b_HackathonStyleInfo.png">
 
     <meta property="og:description" content="Hackathonの情報を配信" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
