Fix Modal BackDrop

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="Content-Style-Type" content="text/css; charset=UTF-8">
     
     <meta http-equiv="Content-Script-Type" content="text/javascript; charset=UTF-8">
-    <meta http-equiv="description" content="ハッカソンのイベントカレンダーサイトです。ハッカソンのイベントを地域ごとにカレンダー形式でまとめています。ご希望のイベントをお探し下さい。">
-    <meta http-equiv="keywords" content="ハッカソン,まとめ,日程,イベント,開催,一覧,情報,地域別,関西,関東,北海道,中国,九州">
-    
+    <meta http-equiv="description" content="ハッカソンのイベントカレンダー式情報サイトです。ハッカソンのイベント情報を地域ごと(北海道、東北、関東、中部、関西、中国、四国、九州、全国)にカレンダー一覧形式でまとめています。ご希望の日程に合う開催中のイベントをお探し下さい。">
+    <meta http-equiv="keywords" content="ハッカソン,イベント,カレンダー,東京,大阪,横浜,岐阜,福岡,まとめ,日程,一覧">
     <meta property="og:site_name" content="Hackathon Style Info">
     <meta property="og:title" content="Hackathon Style Info - Let's Hackathon!">
     <meta property="og:url" content="http://hackathon.style-info.org/"> 
